fixed minor overlaps

--- a/src/pages/About_Us.module.css
+++ b/src/pages/About_Us.module.css
@@ -1385,7 +1385,7 @@ left: 20%;
   }
    .div3 img, .phoneImg img{
     width: 95% !important;
-    height: 130px !important;
+    height: 150px !important;
   }
   .paragraph {
     width: 280px;
